feat: add redis connector support
